--- a/Asset/CSS/footer.css
+++ b/Asset/CSS/footer.css
@@ -5,7 +5,7 @@
     --secondary-color: #ffffffba;      
     --copyright-color: #bdc3c7;   
 
-    --font-family: 'Arial', sans-serif;
+    --font-family: "Poppins", sans-serif;
     --font-size-base: 1em;
     --font-size-heading: 1.5em;
     --font-size-small: 0.9em;
@@ -26,12 +26,13 @@ body {
     font-family: var(--font-family);
     line-height: 1.6;
     color: var(--text-color);
+    max-width: 100vw;
 }
 
 footer {
     background-color: var(--primary-color);
     color: var(--text-color);
-    padding: var(--spacing-large) var(--spacing-small);
+    padding: var(--spacing-medium) var(--spacing-small);
 }
 
 .footer-container {
@@ -40,7 +41,7 @@ footer {
     justify-content: space-between;
     max-width: 1500px;
     gap: 30px;
-    margin: 0 auto;
+    margin: 0 0;
     padding: 0 var(--spacing-small);
 }
 
