--- a/Asset/CSS/footer.css
+++ b/Asset/CSS/footer.css
@@ -1,9 +1,14 @@
 
 :root {
-    --primary-color: #00629b;       
+    --primary-color: #1b345f;       
     --text-color: #ffffff;    
     --secondary-color: #ffffffba;      
     --copyright-color: #bdc3c7;   
+
+    --linkedin-color: #0077b5;
+    --mail-colour: #FBBC05;
+    --twitter-color: #1DA1F2;
+    --phone-color: #25D366;
 
     --font-family: "Poppins", sans-serif;
     --font-size-base: 1em;
@@ -35,14 +40,15 @@ footer {
     padding: var(--spacing-medium) var(--spacing-small);
 }
 
-.footer-container {
+.footer-container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1500px;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 10%;
     gap: 30px;
     margin: 0 0;
-    padding: 0 var(--spacing-small);
+    padding: 10px var(--spacing-small);
 }
 
 .footer-logo, .footer-about, .footer-services, .footer-contact {
@@ -103,20 +109,28 @@ footer {
 .social-icons a {
     color: var(--secondary-color);
     font-size: var(--font-size-heading);
-    transition: color 0.3s ease;
 }
 
-.social-icons a:hover {
-    color: var(--text-color);
+.social-icons a i:hover {   
+    font-size: 1.3em;
+}
+
+.social-icons a i {
+    font-size: 1em;
+    transition: all .3s ease-out;
+}
+
+.footer-copyright p{
+    color: var(--copyright-color);
 }
 
 .footer-copyright {
     text-align: center;
-    margin-top: var(--spacing-medium);
+    margin-top: var(--spacing-small);
     padding-top: var(--spacing-medium);
     font-size: var(--font-size-small);
-    color: var(--copyright-color);
 }
+
 
 /* Responsive Design */
 @media (max-width: 768px) {
