--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -1,12 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 :root {
-  --primary-bg-blue: #00629b;
+  --primary-bg-blue: #1b345f;
   --white: #fff;
   --main-font: "Poppins", sans-serif;
 }
+
 p{
   color: var(--primary-bg-blue);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary-bg-blue);
+}
+
+::selection {
+  background-color: var(--primary-bg-blue);
+  color: var(--white);
 }
 * {
   margin: 0;
@@ -17,6 +32,7 @@ p{
 
 html {
   scroll-behavior: smooth;
+  overflow-x:hidden ;
 }
 
 body {
@@ -78,6 +94,9 @@ a:visited {
   padding: 0 40px;
 }
 
+.navbar ul li a i {
+  margin-left: 8px;
+}
 
 .navbar ul {
   display: flex;
@@ -98,11 +117,12 @@ a:visited {
   padding: 10px 0;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   min-width: 180px;
-  top: 100%;
+  top: 210%;
   left: 0;
   border-radius: 5px;
   z-index: 1000;
   flex-direction: column;
+  transition: all 0.9s ease;
 }
 
 .dropdown a {
@@ -161,25 +181,27 @@ a:visited {
   color: var(--primary-bg-blue);
   max-width: 500px;
 }
+
 .container-text p{
   max-width: 550px;
 }
 
 .slider-container {
   width: 760px;
-  max-width: 800px; 
+  height: 500px;
   overflow: hidden;
   border-radius: 10px;
+  position: relative;
 }
 
 .slider {
   display: flex;
-  width: 760px;
-  transition: transform 0.7s ease-in-out; 
+  transition: transform 0.7s ease-in-out;
+  width: calc(760px * 5); /* Adjust based on the number of slides */
 }
 
 .slide {
-  width: 760px; 
+  width: 760px;
   flex-shrink: 0;
 }
 
@@ -187,5 +209,5 @@ a:visited {
   width: 100%;
   height: 500px;
   object-fit: cover;
-  display: flex;
 }
+
